add: add special types exercise demonstrating variable assignment with any type

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "e1": "node dist/typescript-fundamentals/variables/exercises.js",
-    "e2": "node dist/typescript-fundamentals/primitive-base/exercises.js"
+    "e2": "node dist/typescript-fundamentals/primitive-base/exercises.js",
+    "e3": "node dist/typescript-fundamentals/special-types/exercises.js"
   },
   "keywords": [],
   "author": "",
