refactor: add interface type for Product with properties name and price; create and log a product instance

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "e1": "node dist/typescript-fundamentals/variables/exercises.js",
     "e2": "node dist/typescript-fundamentals/primitive-base/exercises.js",
     "e3": "node dist/typescript-fundamentals/special-types/exercises.js",
-    "e4": "node dist/typescript-fundamentals/array-tuple-obj/exercises.js"
+    "e4": "node dist/typescript-fundamentals/array-tuple-obj/exercises.js",
+    "e5": "node dist/typescript-fundamentals/interface-type/exercises.js"
   },
   "keywords": [],
   "author": "",
