Implement Giorno enum for days of the week

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "e4": "node dist/typescript-fundamentals/array-tuple-obj/exercises.js",
     "e5": "node dist/typescript-fundamentals/interface-type/exercises.js",
     "e6": "node dist/typescript-fundamentals/typed-functions/exercises.js",
-    "e7": "node dist/typescript-fundamentals/union-literal-types/exercises.js"
+    "e7": "node dist/typescript-fundamentals/union-literal-types/exercises.js",
+    "e8": "node dist/typescript-fundamentals/enum/exercises.js"
   },
   "keywords": [],
   "author": "",
