--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typescript-exercises",
+  "name": "typescript-base-exercises",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
